@@ -7,4 +7,5 @@ timeout.o
 -liobuf/iobuf
 -lstr/str
 -lnet/socket
+-lunix/sig
 socket.lib
